# janken

./: .gitignore  AGENTS.md  README.md  pyproject.toml  usecase.yaml  usecaseapi.ucase.yaml
docs/: build_process.md  spec_v1.md
src/app_shell/: __init__.py  cli.py  composition.py  http.py
tests/integration/: test_acchi_muite_hoi_usecases.py  test_cli.py  test_http.py  test_janken_usecases.py
tests/unit/: test_acchi_muite_hoi_domain.py  test_janken_domain.py
