[project]
name = "janken"
version = "0.1.0"
description = "UseCaseAPI-based janken CLI and HTTP app"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "rich>=13.9.0",
    "typer>=0.25.1",
    "usecaseapi[swagger]>=2.1.3",
    "uvicorn>=0.32.0",
]

[project.scripts]
acchi-muite-hoi = "app_shell.cli:main_acchi_muite_hoi"
janken = "app_shell.cli:main_janken"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app_shell", "packages"]

[tool.hatch.build.targets.wheel]
packages = ["src/app_shell", "src/packages"]
